--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-show-more": "^2.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
