--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,15 +6,22 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "basic-auth": "^2.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.4",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "query-string": "^6.2.0",
+    "stripe": "^6.12.1",
+    "uniqid": "^5.0.3"
   }
 }
