--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
     "react-credit-card-input": "^1.0.15",
     "react-dom": "^16.5.2",
+    "react-notification-system": "^0.2.17",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
