--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,8 +16,10 @@
     "react-scripts": "1.1.5",
     "react-select-us-states": "^0.1.2",
     "react-show-more": "^2.0.0",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
