--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "node-sass-chokidar": "^1.3.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-credit-card-input": "^1.0.15",
     "react-dom": "^16.5.2",
