--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "better-react-spinkit": "^2.0.4",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "form-urlencoded": "^3.0.0",
     "node-sass-chokidar": "^1.3.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
