--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "react": "^16.5.2",
     "react-credit-card-input": "^1.0.15",
     "react-dom": "^16.5.2",
+    "react-facebook-login": "^4.1.1",
     "react-notification-system": "^0.2.17",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
