--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "better-react-spinkit": "^2.0.4",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "form-urlencoded": "^3.0.0",
+    "material-ui-image": "^3.0.3",
     "node-sass-chokidar": "^1.3.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
