--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "form-urlencoded": "^3.0.0",
     "material-ui-image": "^3.0.3",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
