--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "material-ui-image": "^3.0.3",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
+    "parse-address": "^1.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-credit-card-input": "^1.0.15",
