--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "node-sass-chokidar": "^1.3.3",
     "parse-address-string": "0.0.3",
     "prop-types": "^15.6.2",
+    "rc-rate": "^2.4.3",
     "react": "^16.5.2",
     "react-credit-card-input": "^1.0.15",
     "react-dom": "^16.5.2",
