--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "react-device-detect": "^1.6.1",
     "react-dom": "^16.5.2",
     "react-facebook-login": "^4.1.1",
+    "react-input-autosize": "^2.2.1",
     "react-notification-system": "^0.2.17",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
