--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,7 @@
     "node-sass-chokidar": "^1.3.3",
     "parse-address-string": "0.0.3",
     "prop-types": "^15.6.2",
-    "query-string": "^6.2.0",
+    "querystring": "^0.2.0",
     "rc-rate": "^2.4.3",
     "rc-slider": "^8.6.4",
     "react": "^16.5.2",
