--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "morgan": "~1.9.0",
+    "nodemailer": "^5.0.0",
     "nodemon": "^1.18.4",
     "pug": "2.0.0-beta11",
     "query-string": "^6.2.0",
